changes have been made according to the comments
